<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TMS Mobile</string>
    <string name="preferences_label">Preferencias</string>
    <string name="fences_label">Vallas</string>
    <string name="about_label">Acerca de</string>
    <string name="add_fence">Nueva valla</string>
    <string name="remove_fence">Borrar valla</string>
    <string name="send_alert">Enviar Alerta Usuario</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Borrar</string>

    <!-- String para PREFERENCIAS -->
    <string name="call_center_preferences">Ajustes servidor Call Center</string>
    <string name="title_ip_preference">IP del servidor</string>
    <string name="sumary_ip_preference">Dirección IP del servidor Call Center</string>
    <string name="dialog_title_ip_preference">Introduzca dirección IP</string>
    <string name="default_ip_preference">home.bacamt.com</string>
    <string name="title_port_preference">Puerto</string>
    <string name="sumary_port_preference">Puerto TCP del servidor Call Center</string>
    <string name="dialog_title_port_preference">Introduzca número de puerto</string>
    <string name="default_port_preference">83</string>
    <string name="title_path_preference">Path</string>
    <string name="sumary_path_preference">PATH relativo del servidor</string>
    <string name="dialog_title_path_preference">Introduzca PATH</string>
    <string name="default_path_preference">/tms-web/connector</string>
    <string name="phone_preferences">Ajustes del terminal</string>
    <string name="title_phone_number_preference">Número de teléfono</string>
    <string name="sumary_phone_number_preference">Número del terminal de teleasistencia</string>
    <string name="dialog_title_phone_number_preference">Introduzca Número de Teléfono</string>
    <string name="default_phone_number_preference">123</string>

    <!-- String para ABOUT -->
    <string name="member_agumpg">Agustín M. Pereña García</string>
    <string name="desc_agumpg">Preferencias y Diseño</string>
    <string name="member_miguelqm">Miguel Angel Quero Marín</string>
    <string name="desc_miguelqm">Sensores y Alertas</string>
    <string name="member_miguepintor">Miguel Pintor Moral</string>
    <string name="desc_miguepintor">Comunicación y Protocolos</string>
    <string name="member_cristian">Cristian Jiménez Salvatierra</string>
    <string name="desc_cristian">Interfaz de usuario</string>
    <string name="member_ibaca">Ignacio Baca Moreno</string>
    <string name="desc_ibaca">Geolocalización</string>

</resources>