<?xml version="1.0" encoding="utf-8"?>
<!--
	PREFERENCIAS tms-mobile:

	Categoría: Ajustes del servidor Call Center
		- Dirección IP
		- Puerto de conexión
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/call_center_preferences" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_ip_preference"
            android:key="ip_preference"
            android:summary="@string/sumary_ip_preference"
            android:title="@string/title_ip_preference" />
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_port_preference"
            android:key="port_preference"
            android:summary="@string/sumary_port_preference"
            android:title="@string/title_port_preference" />
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_path_preference"
            android:key="path_preference"
            android:summary="@string/sumary_path_preference"
            android:title="@string/title_path_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/phone_preferences" >
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_phone_number_preference"
            android:key="phone_number_preference"
            android:summary="@string/sumary_phone_number_preference"
            android:title="@string/title_phone_number_preference" />
    </PreferenceCategory>

</PreferenceScreen>