<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <TextView
            style="@style/title"
            android:text="@string/app_name" />

        <TextView
            style="@style/member"
            android:text="@string/member_agumpg" />

        <TextView
            style="@style/description"
            android:text="@string/desc_agumpg" />

        <TextView
            style="@style/member"
            android:text="@string/member_miguelqm" />

        <TextView
            style="@style/description"
            android:text="@string/desc_miguelqm" />

        <TextView
            style="@style/member"
            android:text="@string/member_miguepintor" />

        <TextView
            style="@style/description"
            android:text="@string/desc_miguepintor" />

        <TextView
            style="@style/member"
            android:text="@string/member_cristian" />

        <TextView
            style="@style/description"
            android:text="@string/desc_cristian" />

        <TextView
            style="@style/member"
            android:text="@string/member_ibaca" />

        <TextView
            style="@style/description"
            android:text="@string/desc_ibaca" />
    </LinearLayout>

</ScrollView>